added HTML generator

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <head>
   <script src="assert.js"></script>
   <script src="notes.js"></script>
-  <script src="notes_spec.js"></script>
   <script src="list.js"></script>
+  <script src="notes_spec.js"></script>
   <script src="list_spec.js"></script>
+  <script src="note_list_view.js"></script>
+  <script src="note_list_view_spec.js"></script>
+
 </head>
 </html>
